@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4Xt.cc,v 1.8 2001-12-03 08:01:47 barrand Exp $
+// $Id: G4Xt.cc,v 1.9 2002-11-06 08:12:58 barrand Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // G.Barrand
@@ -58,7 +58,7 @@ G4Xt* G4Xt::getInstance (
 /***************************************************************************/
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 {
-  return G4Xt::getInstance (0,NULL,"Geant4");
+  return G4Xt::getInstance (0,NULL,(char*)"Geant4");
 }
 /***************************************************************************/
 G4Xt* G4Xt::getInstance (
